--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.0",
+    "@heroicons/vue": "^2.2.0",
+    "@tailwindcss/vite": "^4.0.6",
     "@vitejs/plugin-vue": "^5.2.1",
-    "class-variance-authority": "^0.7.1",
     "pinia": "^2.3.1",
-    "tailwind-merge": "^3.0.1",
-    "tailwindcss": "^4.0.0",
-    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss": "^4.0.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -34,6 +32,7 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^5.0.0-beta.8",
     "eslint": "^9.18.0",
     "eslint-plugin-vue": "^9.32.0",
     "jiti": "^2.4.2",
